# parquet-byte-indexer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure_dependencies.sh
src/: indexer.cc  indexer.cpp
src/util/: FlatFileUtility.cpp  FlatFileUtility.hpp  JsonArgumentParser.cpp  JsonArgumentParser.hpp
